--- a/doc/whats_new/v0.23.rst
+++ b/doc/whats_new/v0.23.rst
@@ -421,6 +421,10 @@ Changelog
   valid numeric arrays.
   :pr:`11296` by `Alexandre Gramfort`_ and  :user:`Georgi Peev <georgipeev>`.
 
+- |Feature| Added the :class:`svm.SVDD` class for novelty detection based on
+  soft minimal volume hypersphere around the sample data.
+  :user:`Ivan Nazarov <ivannz>`.
+
 :mod:`sklearn.tree`
 ...................
 
